<resources>
    <string name="app_name">Simply Automatic</string>
    <string name="title_activity_main">Simply Automatic</string>

    <string name="active_tab_title">Active</string>
    <string name="inactive_tab_title">Inactive</string>

    <string name="fab_tooltip">Add button</string>

    <string name="notification_text">Service is running</string>

    <string name="routine_list_then">then</string>
    <string name="routine_list_action_delete">Delete routine</string>
    <string name="routine_list_action_toggle">Toggle routine activation</string>

    <string name="appbar_setting">Setting</string>

    <string name="dialog_confirm_delete">Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Create Activity -->
    <string name="title_activity_create">Create New Routine</string>
    <string name="create_ok_button">Create Routine</string>
    <string name="create_card_if">If…</string>
    <string name="create_card_then">then…</string>
    <string name="create_card_select_condition">Select Condition</string>
    <string name="create_card_select_action">Select Action</string>
    <string name="create_card_name">Name (max 30 characters)</string>
    <string name="create_card_name_hint">Enter routine name</string>

    <!-- Picker Activity -->
    <string name="title_activity_picker">Pick Module</string>

    <!-- Configurator Activity -->
    <string name="title_activity_configurator">Configure Module</string>
    <string name="configurator_confirm">Configure Module</string>

    <!-- Wifi module -->
    <string name="module_wifi_radio_on">Turn on wifi</string>
    <string name="module_wifi_radio_off">Turn off wifi</string>
    <string name="module_wifi_description_on">Turn on wifi</string>
    <string name="module_wifi_description_off">Turn off wifi</string>
    <string name="module_wifi_picker_name">Wifi</string>
    <string name="module_wifi_picker_description">Manipulate wifi status (on/off)</string>


    <!-- Notification module -->
    <string name="module_notify_title_field">Title</string>
    <string name="module_notify_content_field">Content</string>
    <string name="module_notify_title_hint">Enter notification title here</string>
    <string name="module_notify_content_hint">Enter notification content here</string>
    <string name="module_notify_description">Notify %1$s</string>
    <string name="module_notify_picker_name">Notification</string>
    <string name="module_notify_picker_description">Trigger notification with specific title and content</string>

    <!--  Sonoff module  -->
    <string name="module_sonoff_toggle_on">Toggle on</string>
    <string name="module_sonoff_toggle_off">Toggle off</string>
    <string name="module_sonoff_description">Turn %1$s Sonoff at %2$s</string>
    <string name="module_sonoff_picker_name">Sonoff</string>
    <string name="module_sonoff_picker_description">Set sonoff smart switch status (on/off)</string>
    <string name="module_sonoff_username_hint">Enter sonoff API username</string>
    <string name="module_sonoff_password_label">Password :</string>
    <string name="module_sonoff_password_hint">Enter sonoff API password</string>
    <string name="module_sonoff_address_label">Address :</string>
    <string name="module_sonoff_address_hint">Enter sonoff address</string>

    <!-- Time module-->
    <string name="module_time_module_oneshot">Oneshot</string>
    <string name="module_time_module_repeating">Repeating</string>
    <string name="module_time_module_time">Time :</string>
    <string name="module_time_module_date">Date :</string>
    <string name="module_time_module_days">Day :</string>
    <string name="module_time_description_oneshot">Timer at %1$s %2$s</string>
    <string name="module_time_description_repeating">Repeating timer at %1$s</string>
    <string name="module_time_description_repeating_day">Repeating timer at %1$s %2$s</string>
    <string name="module_time_picker_name">Time</string>
    <string name="module_time_picker_description">Trigger at specific time and/or interval</string>

    <!-- Sensor module -->
    <string name="module_sensor_type">Sensor type</string>
    <string name="module_sensor_threshold">Threshold</string>
    <string name="module_sensor_value">Current value</string>
    <string name="module_sensor_value_filled">Current value : %1$f</string>
    <string name="module_sensor_threshold_hint">Threshold value</string>
    <string name="module_sensor_type_magnet">Magnetometer</string>
    <string name="module_sensor_type_accelerometer_x">Accelerometer X</string>
    <string name="module_sensor_type_accelerometer_y">Accelerometer Y</string>
    <string name="module_sensor_type_accelerometer_z">Accelerometer Z</string>
    <string name="module_sensor_description">Sensor %1$s %2$s %3$s</string>
    <string name="module_sensor_picker_name">Sensor</string>
    <string name="module_sensor_picker_description">Use sensor to trigger with specified threshold</string>

    <string-array name="operator_array">
        <item>&lt;</item>
        <item>&gt;</item>
    </string-array>
</resources>
