<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.time.TimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radio_group">

            <RadioButton
                android:id="@+id/oneshot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_time_module_oneshot"/>

            <RadioButton
                android:id="@+id/repeating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_time_module_repeating"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/module_time_module_days"
            android:textSize="20sp"
            android:visibility="gone" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/day_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/module_time_module_date"
            android:textSize="20sp"
            android:visibility="gone"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:theme="@style/AppTheme"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/module_time_module_time"
            android:textSize="20sp"/>

        <TimePicker
            android:id="@+id/alarmTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:timePickerMode="spinner" />

    </LinearLayout>

</ScrollView>